--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ const paddleT = 10; //set paddle thickness
 var userScore = 0;
 var cpuScore = 0;
 
-const winScore = 1;
+const winScore = 10; //Game goes up to 10
 var showingWinScreen = false;
 
 // Adapted from: https://developer.mozilla.org/en-US/docs/Web/API/MouseEvent
@@ -112,7 +112,7 @@ function ballReset() {
 }
 function callBF(){ //calls both functions
     draw(); 
-    movement();
+    mvmt();
 }
 function cpuMvmt(){
     var paddle2YCenter = paddle2Y + (paddleH/2);
@@ -123,8 +123,8 @@ function cpuMvmt(){
 	}
 }
 
-
-function movement(){
+//ball movement
+function mvmt(){
     if(showingWinScreen) {
 		return;
 	}
